<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.convertidor_mastered_.ActivityResultado" >

    <Button
        android:id="@+id/btn_R1Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_R1Conv"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_R1Conv"
        android:layout_marginBottom="39dp"
        android:text="@string/btn_txtReset" />

    <EditText
        android:id="@+id/et_UserKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_resMillas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_R1Conv"
        android:layout_alignLeft="@+id/btn_R1Conv"
        android:layout_marginBottom="56dp"
        android:text="@string/def_resM"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_R1Conv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_R1Reset"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/btn_txtConv" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/tv_promptKm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
