<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.convertidor_mastered_.MainActivity" >

    <TextView
        android:id="@+id/tv_infoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/info_convertidor" />

    <Button
        android:id="@+id/btn_mainGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_mainDis"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_mainDis"
        android:layout_marginBottom="45dp"
        android:onClick="convertirGrados"
        android:text="@string/title_activity_activity_resultado2" />

    <Button
        android:id="@+id/btn_mainDis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_mainGrados"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:onClick="convertirKms"
        android:text="@string/title_activity_activity_resultado" />

    <EditText
        android:id="@+id/et_inputUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_infoMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:inputType="numberDecimal" />

</RelativeLayout>